# class7test

./: .env  Cargo.toml  Dockerfile  README.md  local.db
.github/workflows/: deploy.yml
.sqlx/: query-2fe7ffa9d84d56554feb9785a70cbead7f14bdbdcf457c0befd4f7031d32d57f.json  query-c0db0dbbab43ed9b760fc98e33791a18639ecfca0b05122906a27542f5b4ebeb.json  query-ce30d07bc42fa37bec322e91a11e63bac09595a4a4585025842af59b210c7f79.json
logs/: app.log.2024-09-19
src/: main.rs
src/handlers/: class7.rs
src/models/: class7.rs
src/routes/: class7.rs
static/pages/: 404.html  completed.html  index.html
templates/class7/: completed.html  index.html  practice.html
templates/job/: index.html  jobs.html
templates/pages/: 404.html  completed.html  exam.html  index.html  practice.html  question.html
