[package]
name = "class7exam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.5"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
axum = {version = "0.7",features = ["json"] }
sqlx = { version = "0.8.1", features = ["sqlite", "macros", "runtime-tokio"] }
tera = { version = "1"}
lazy_static = {version = "1"}
captcha = "0.0.9"
tower-cookies = "0.10"
rand = "0.8.5"
config = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
